@startuml
!theme plain
hide circle
hide methods
hide attributes

' Внешние классы фреймворка (для наследования)
class QObject
class QThread

package "Core" {
    ' Основные контроллеры
    class VideoController
    class EventCreationController
    class VideoProcessor
    class VideoReaderThread
    class ProjectManager
    class VideoExporter

    ' Модели данных
    class Project
    class EventCreationConfig

    ' Перечисления
    enum RecordingMode
    enum EventCreationMode
    enum RecordingState
}

' === Наследование ===
QObject <|-- VideoController
QObject <|-- EventCreationController
QThread <|-- VideoReaderThread

' === Основные связи (из вашего описания) ===
VideoController --> VideoProcessor
VideoController --> EventCreationController
VideoController --> ProjectManager
VideoController --> VideoExporter 
VideoProcessor --> VideoReaderThread 

' === Связи с данными и типами (логические) ===
ProjectManager ..> Project 
EventCreationController ..> EventCreationConfig
EventCreationController ..> EventCreationMode
EventCreationController ..> RecordingState 
VideoController ..> RecordingMode 
@enduml